// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableBody Style tests should render with default styles 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-2 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0 circuit-1"
  >
    <td
      class="circuit-2"
    >
      Foo
    </td>
    <td
      class="circuit-2"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody Style tests should render with fixed header styles 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-2 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
}

@media (max-width: 767px) {
  .circuit-2 {
    left: 0;
    top: auto;
    position: absolute;
    width: 145px;
    overflow-wrap: break-word;
  }
}

.circuit-3 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  display: none;
}

@media (max-width: 767px) {
  .circuit-3 {
    display: table-cell;
    min-width: 145px;
    max-width: 145px;
    width: 145px;
  }
}

.circuit-4 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0 circuit-1"
  >
    <th
      class="circuit-2"
      scope="row"
    >
      Foo
    </th>
    <td
      aria-hidden="true"
      class="circuit-3"
      role="presentation"
    >
      Foo
    </td>
    <td
      class="circuit-4"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should not render a cell with hovered styles if its column is not currently hovered 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-2 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0 circuit-1"
  >
    <td
      class="circuit-2"
    >
      Foo
    </td>
    <td
      class="circuit-2"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should render a cell with hovered styles if its column is currently hovered 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-2 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  background-color: #F5F5F5;
}

.circuit-3 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0 circuit-1"
  >
    <td
      class="circuit-2"
    >
      Foo
    </td>
    <td
      class="circuit-3"
    >
      Bar
    </td>
  </tr>
</tbody>
`;
